@@ -1,3 +1,10 @@
+2004-08-09  Stefan Jahn  <stefan@lkcc.org>
+
+	* qucs_de.ts: Updated german translation.
+
+	* bitmaps/Makefile.am (XPMS): Added missing files to be
+	installed properly.
+
 2004-08-08  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* put enhancement and depletion MOSFET into one component
